--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard] (>=0.115.12,<0.116.0)"
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "sqlmodel (>=0.0.24,<0.0.25)"
 ]
 
 
